--- a/community.html
+++ b/community.html
@@ -18,7 +18,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="home.html" >Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="submission.html">Submission</a></li>
             <li><a href="community.html" class="home-active">Community</a></li>
@@ -312,4 +312,5 @@
     <!-- link to js -->
     <script src="./script.js"></script>
 </body>
+
 </html>
