--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
         <a href="#" class="logo"><img src="images/logo_with_slogan.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-            <li><a href="home.html" >Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="gallery.html" class="home-active">Gallery</a></li>
             <li><a href="submission.html">Submission</a></li>
             <li><a href="community.html">Community</a></li>
@@ -326,4 +326,5 @@
     <!-- link to js -->
     <script src="./script.js"></script>
 </body>
+
 </html>
