--- a/submission.html
+++ b/submission.html
@@ -21,7 +21,7 @@
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="home.html" >Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="submission.html" class="home-active">Submission</a></li>
             <li><a href="community.html">Community</a></li>
@@ -105,4 +105,5 @@
     <!-- link to js -->
     <script src="./script.js" defer></script>
 </body>
+
 </html>
