--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="logo"><img src="images/logo_with_slogan.png" alt=""></a>
         <div class="bx bx-menu" id="menu-icon"></div>
         <ul class="navbar">
-            <li><a href="home.html" class="home-active">Home</a></li>
+            <li><a href="index.html" class="home-active">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="submission.html">Submission</a></li>
             <li><a href="community.html">Community</a></li>
@@ -296,3 +296,4 @@
 
 </body>
 </html>
+
